--- a/home.html
+++ b/home.html
@@ -256,6 +256,64 @@
     ]
   },
   {
+    "title": "Mẹ 3 con 'lão hóa ngược' sau trút bỏ 27 kg mỡ",
+    "content": "Bùi Thị Minh Nguyệt, 28 tuổi, đã giảm 27 kg và 40 cm vòng eo trong gần 1,5 năm nhờ áp dụng chế độ ăn \"eat clean\" và tích cực vận động. Sau khi sinh hai con, Nguyệt đã phải đối mặt với tình trạng béo phì và nhiều vấn đề sức khỏe, nhưng nhờ quyết tâm thay đổi, cô đã đạt được vóc dáng thon gọn và khỏe mạnh hơn. Hiện tại, Nguyệt không chỉ duy trì thói quen ăn uống lành mạnh mà còn trở thành huấn luyện viên dinh dưỡng, giúp đỡ những người khác trong hành trình giảm cân và cải thiện sức khỏe.",
+    "link": "https://vnexpress.net/me-3-con-lao-hoa-nguoc-sau-trut-bo-27-kg-mo-4864134.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Nguyễn Nguyệt đã giảm bao nhiêu kg trong quá trình thay đổi chế độ ăn uống?",
+    "answers": [
+      {
+        "text": "27 kg",
+        "correct": true
+      },
+      {
+        "text": "15 kg",
+        "correct": false
+      },
+      {
+        "text": "35 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nghệ sĩ Vũ Thanh thời trẻ lầm lỡ, về già đau đớn nhìn vợ nguy kịch",
+    "content": "Nghệ sĩ Vũ Thanh hiện đang trải qua thời kỳ khó khăn khi vợ ông, ca sĩ Lệ Hải, đang trong tình trạng nguy kịch do nhiều bệnh lý nghiêm trọng. Sau hơn 40 năm gắn bó, ông phải chứng kiến cảnh vợ mình chống chọi với bệnh tật và suy yếu dần. Chi phí điều trị hiện đã vượt quá khả năng tài chính của gia đình, và ông phải vật lộn để kiếm sống trong lúc chăm sóc vợ. Dù vậy, ông vẫn giữ tinh thần lạc quan và không ngừng hy vọng vào sự hồi phục của vợ.",
+    "link": "https://dantri.com.vn/giai-tri/nghe-si-vu-thanh-thoi-tre-lam-lo-ve-gia-dau-don-nhin-vo-nguy-kich-20250321173615479.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tình trạng sức khỏe của vợ nghệ sĩ Vũ Thanh hiện tại ra sao?",
+    "answers": [
+      {
+        "text": "Vợ ông đang trong tình trạng nguy kịch.",
+        "correct": true
+      },
+      {
+        "text": "Vợ ông đã hồi phục hoàn toàn.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông đang khỏe mạnh và không có vấn đề gì.",
+        "correct": false
+      },
+      {
+        "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ronaldo ghi bàn và hỏng phạt đền trong chiến thắng của Bồ Đào Nha",
     "content": "Trong trận tứ kết UEFA Nations League, Cristiano Ronaldo ghi một bàn nhưng cũng hỏng phạt đền trong chiến thắng 5-2 của Bồ Đào Nha trước Đan Mạch, tổng tỷ số 5-3. Trận đấu diễn ra kịch tính với nhiều pha rượt đuổi tỷ số và Ronaldo, mặc dù bỏ lỡ một số cơ hội, đã góp mặt trong bàn thắng quan trọng. Francisco Trincao là người tỏa sáng với hai bàn thắng trong hiệp phụ, giúp Bồ Đào Nha giành quyền vào bán kết gặp Đức.",
     "link": "https://vnexpress.net/ronaldo-ghi-ban-va-hong-phat-den-trong-chien-thang-cua-bo-dao-nha-4864920.html",
@@ -1937,33 +1995,6 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -2017,6 +2048,33 @@
       },
       {
         "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -2188,37 +2246,6 @@
     ]
   },
   {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 điều nên làm mỗi ngày để giảm hôi miệng",
     "content": "Bài viết đề cập đến 5 thói quen hàng ngày giúp giảm hôi miệng, bao gồm việc duy trì hệ tiêu hóa khỏe mạnh, giữ gìn vệ sinh răng miệng, súc miệng sau khi thức dậy, nhai một lá trầu sau bữa ăn và giữ đủ nước. Những thói quen này không chỉ giúp cải thiện hơi thở mà còn hỗ trợ sức khỏe răng miệng tổng thể. Việc chăm sóc miệng đúng cách có thể ngăn ngừa các nguyên nhân gây hôi miệng do vi khuẩn và thực phẩm.",
     "link": "https://vnexpress.net/5-dieu-nen-lam-moi-ngay-de-giam-hoi-mieng-4864649.html",
@@ -2273,28 +2300,32 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
     "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
     "answers": [
       {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
         "correct": true
       },
       {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "text": "Chỉ gây hại về mặt tâm lý.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -2322,6 +2353,33 @@
       },
       {
         "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -2876,37 +2934,6 @@
     ]
   },
   {
-    "title": "Nguyên nhân khiến trẻ nôn trớ",
-    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
-    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
-    "answers": [
-      {
-        "text": "Do hệ tiêu hóa chưa hoàn thiện",
-        "correct": true
-      },
-      {
-        "text": "Do trẻ ăn quá nhiều",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ không được bú sữa",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ bị sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Do trẻ không ăn uống đầy đủ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tranh cãi gay gắt những khóa học dạy làm cha mẹ tốt",
     "content": "Tại Trung Quốc, các khóa học dạy làm cha mẹ đang gây tranh cãi với những khẩu hiệu như \"Cha mẹ sửa mình, không phải sửa con\". Những khóa học này thu hút nhiều phụ huynh đang gặp khó khăn trong việc nuôi dạy con cái. Tuy nhiên, hiệu quả của các khóa học này vẫn là đề tài gây tranh cãi, khi nhiều phụ huynh vẫn chưa thấy được cải thiện trong mối quan hệ với con hoặc tình trạng của con cái. Thêm vào đó, công ty cung cấp khóa học cũng đã bị phạt vì vi phạm quảng cáo.",
     "link": "https://dantri.com.vn/giao-duc/tranh-cai-gay-gat-nhung-khoa-hoc-day-lam-cha-me-tot-20250322150409471.htm",
@@ -2933,6 +2960,37 @@
       },
       {
         "text": "Chúng hoàn toàn không được ủng hộ bởi xã hội",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguyên nhân khiến trẻ nôn trớ",
+    "content": "Trẻ sơ sinh dễ bị nôn trớ do hệ tiêu hóa chưa hoàn thiện, bú quá no hoặc một số bệnh lý đường tiêu hóa. Nôn trớ thường là tình trạng lành tính và có thể tự khỏi khi trẻ lớn hơn. Tuy nhiên, nếu tình trạng này kéo dài kèm theo các dấu hiệu bất thường như chậm tăng cân hay sốt cao, cha mẹ nên đưa trẻ đi khám. Nguyên nhân nôn trớ có thể bao gồm trào ngược dạ dày thực quản, dị ứng sữa hoặc nhiễm trùng tiêu hóa.",
+    "link": "https://vnexpress.net/nguyen-nhan-khien-tre-non-tro-4864611.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao trẻ sơ sinh lại bị nôn trớ?",
+    "answers": [
+      {
+        "text": "Do hệ tiêu hóa chưa hoàn thiện",
+        "correct": true
+      },
+      {
+        "text": "Do trẻ ăn quá nhiều",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ không được bú sữa",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ bị sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Do trẻ không ăn uống đầy đủ",
         "correct": false
       }
     ]
@@ -3188,37 +3246,6 @@
       },
       {
         "text": "Tham gia vào các cuộc bầu cử sớm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Toyota Supra ra mắt phiên bản cuối cùng, giá 155.000 USD",
-    "content": "Toyota vừa ra mắt phiên bản cuối cùng của dòng xe thể thao Supra, mang tên GR Supra A90 Final Edition, với giá bán 155.000 USD. Phiên bản này chỉ sản xuất giới hạn 300 chiếc và khách hàng phải tham gia bốc thăm để có cơ hội mua. GR Supra A90 Final Edition được nâng cấp về sức mạnh, với động cơ 6 xi-lanh 3 lít đạt công suất 429 mã lực, cùng nhiều cải tiến về khí động học và nội thất so với các phiên bản tiêu chuẩn.",
-    "link": "https://vnexpress.net/toyota-supra-ra-mat-phien-ban-cuoi-cung-gia-155-000-usd-4864630.html",
-    "cat": "oto-xe-may",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Toyota Supra phiên bản cuối cùng có giá bao nhiêu?",
-    "answers": [
-      {
-        "text": "155.000 USD",
-        "correct": true
-      },
-      {
-        "text": "80.000 USD",
-        "correct": false
-      },
-      {
-        "text": "69.000 USD",
-        "correct": false
-      },
-      {
-        "text": "429.000 USD",
-        "correct": false
-      },
-      {
-        "text": "300.000 USD",
         "correct": false
       }
     ]
