--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Chiến dịch \"độn thổ\" của Nga khiến quân Ukraine hoảng loạn ở Kursk",
+    "content": "Chiến dịch \"độn thổ\" của Nga tại Kursk đã gây ra sự hoảng loạn cho lực lượng quân đội Ukraine khi binh lính Nga sử dụng đường ống khí đốt để đột nhập vào phòng tuyến của họ. Theo thông tin từ các binh lính Ukraine, tình hình đã trở nên nghiêm trọng khi quân đội Nga tấn công sâu vào khu vực Sudzha, khiến nhiều chỉ huy phải ra lệnh rút lui. Hoạt động này kéo dài một tuần và đã làm suy yếu đáng kể khả năng phòng thủ của Ukraine, dẫn đến tổn thất nghiêm trọng về nhân lực và thiết bị quân sự.",
+    "link": "https://dantri.com.vn/the-gioi/chien-dich-don-tho-cua-nga-khien-quan-ukraine-hoang-loan-o-kursk-20250324064039097.htm",
+    "cat": "the-gioi",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Chiến dịch \"độn thổ\" của Nga đã ảnh hưởng như thế nào đến quân đội Ukraine ở Kursk?",
+    "answers": [
+      {
+        "text": "Gây ra sự hoảng loạn và tổn thất lớn cho quân đội Ukraine.",
+        "correct": true
+      },
+      {
+        "text": "Giúp quân đội Ukraine giành lại lãnh thổ.",
+        "correct": false
+      },
+      {
+        "text": "Khiến quân đội Nga phải rút lui.",
+        "correct": false
+      },
+      {
+        "text": "Không có ảnh hưởng gì đáng kể.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xác định 4 đội vào bán kết UEFA Nations League",
     "content": "Bốn đội tuyển đã xác định được suất vào bán kết UEFA Nations League là Đức, Bồ Đào Nha, Pháp và Tây Ban Nha. Đức giành chiến thắng trước Italy với tổng tỷ số 5-4, trong khi Bồ Đào Nha vượt qua Đan Mạch 5-3. Pháp cần tới loạt đá luân lưu để loại Croatia sau khi hòa tổng tỷ số 2-2, và Tây Ban Nha cũng giành chiến thắng kịch tính trước Hà Lan. Các trận bán kết sẽ diễn ra vào tháng 6/2025 tại Đức.",
     "link": "https://vnexpress.net/xac-dinh-4-doi-vao-ban-ket-uefa-nations-league-4864929.html",
@@ -1881,6 +1908,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -1907,33 +1961,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -2345,33 +2372,6 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -2425,6 +2425,33 @@
       },
       {
         "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -2596,33 +2623,6 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
-    "answers": [
-      {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị ung thư phổi có ăn thịt gà được không?",
     "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
     "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
@@ -2645,6 +2645,33 @@
       },
       {
         "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
