--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Fadil 2021 đã dừng sản xuất có nên mua lại?",
+    "content": "Fadil 2021 đã chính thức dừng sản xuất, khiến nhiều người đặt câu hỏi về việc có nên mua lại xe này hay không. Xe Fadil 2021 đã qua sử dụng, với khoảng 40.000 km và chỉ có một chủ sở hữu, có thể là một lựa chọn hợp lý nếu giá cả phù hợp. Tuy nhiên, người tiêu dùng nên cân nhắc kỹ lưỡng về tình trạng và giá trị thực của xe trước khi quyết định mua.",
+    "link": "https://vnexpress.net/fadil-2021-da-dung-san-xuat-co-nen-mua-lai-4864950.html",
+    "cat": "oto-xe-may",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Có nên mua xe Fadil 2021 đã dừng sản xuất không?",
+    "answers": [
+      {
+        "text": "Có, nếu giá hợp lý và xe trong tình trạng tốt.",
+        "correct": true
+      },
+      {
+        "text": "Không, vì xe đã ngừng sản xuất.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ nếu xe có bảo hành.",
+        "correct": false
+      },
+      {
+        "text": "Không, vì không có phụ tùng thay thế.",
+        "correct": false
+      },
+      {
+        "text": "Có, nếu bạn thích kiểu dáng của xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ung thư vú ở nam giới",
     "content": "Ung thư vú không chỉ xảy ra ở nữ giới mà còn có thể xảy ra ở nam giới, mặc dù tỷ lệ mắc bệnh này ở nam giới thấp hơn. Nguy cơ mắc ung thư vú ở nam giới gia tăng theo độ tuổi, đặc biệt là ở những người trên 60, và có thể liên quan đến các yếu tố như béo phì, tiền sử gia đình, và các gene đột biến như BRCA1 và BRCA2. Triệu chứng bao gồm khối u không đau, thay đổi ở vùng da ngực và nhũ hoa. Điều trị thường bao gồm phẫu thuật, hóa trị và xạ trị.",
     "link": "https://vnexpress.net/ung-thu-vu-o-nam-gioi-4863621.html",
@@ -1612,6 +1643,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -1638,33 +1696,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
